* Feature: BREAKING! Support instruction 'context' in patterns.   * Support specifying context in a pattern to constrain assembly results   * Support using context to compute expressions   * See updated Ghidra GUI for available context variables for your architecture(s)   * See README for more details * Fix: Fix label enforcement in Rust * Fix: Make sure we find all possible matches, even if a second match is only partially complete when another match occurs * Feature: Better pattern search progress reporting * Feature: Search performance improvements